[gd_scene load_steps=5 format=3 uid="uid://dwnfm2ahpplkf"]

[ext_resource type="Script" path="res://game/player/player.gd" id="1_fprxl"]
[ext_resource type="Texture2D" uid="uid://cg1c062bjyooi" path="res://game/player/sprites/Player.png" id="2_mufvi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qvt1g"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j01c4"]
radius = 16.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
collision_layer = 2
collision_mask = 5
script = ExtResource("1_fprxl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_mufvi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qvt1g")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 10)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="player_hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
shape = SubResource("CircleShape2D_j01c4")

[node name="time_of_taking_damage" type="Timer" parent="."]

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="time_of_taking_damage" to="." method="_on_time_of_taking_damage_timeout"]
